# xClaw

./: .claudeignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: architect.md  build-error-resolver.md  code-reviewer.md  doc-updater.md  e2e-runner.md  refactor-cleaner.md  rust-build-resolver.md  rust-reviewer.md  security-reviewer.md  tdd-guide.md
.claude/commands/: archit.md  code-review.md  docs.md  learn.md  tdd.md  update-codemaps.md  update-docs.md
.claude/hooks/: README.md  post-edit-cargo-check.js  post-edit-cargo-clippy.js  post-edit-cargo-fmt.js
.claude/rules/common/: agents.md  coding-style.md  development-workflow.md  git-workflow.md  hooks.md  patterns.md  performance.md  security.md  testing.md
.claude/rules/rust/: coding-style.md  hooks.md  patterns.md  security.md  testing.md
.claude/scripts/: doctor.js  ecc.js  harness-audit.js  install-apply.js  install-plan.js  list-installed.js  repair.js  sessions-cli.js  status.js  sync-ecc-to-codex.sh  uninstall.js
.claude/scripts/ci/: catalog.js
.claude/scripts/codex/: check-codex-global-state.sh  install-global-git-hooks.sh  merge-mcp-config.js
.claude/scripts/codex-git-hooks/: pre-push
.claude/scripts/hooks/: config-protection.js  governance-capture.js  mcp-health-check.js  session-start.js
.claude/scripts/lib/: install-executor.js  install-lifecycle.js  install-manifests.js  resolve-ecc-root.js  session-manager.d.ts  session-manager.js  utils.js
.claude/scripts/lib/install/: apply.js  config.js
.claude/skills/: api-design  backend-patterns  coding-standards  continuous-learning  continuous-learning-v2  documentation-lookup  e2e-testing  frontend-patterns  mcp-server-patterns  rust-patterns  rust-testing  security-review  tdd-workflow
.cursor/agents/: planner.md
.cursor/commands/: plan.md
.cursor/skills/: brainstorming
.cursor/templates/: ARCHITECTURE.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  repl.rs  setup.rs
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/xclaw-agent/: Cargo.toml
crates/xclaw-agent/src/: config.rs  debug_fmt.rs  dispatch.rs  engine.rs  lib.rs  loop.rs  prompt.rs  session.rs  test_support.rs  traits.rs
crates/xclaw-channel/: Cargo.toml
crates/xclaw-channel/src/: discord.rs  lib.rs  slack.rs  telegram.rs  traits.rs  webchat.rs
crates/xclaw-config/: Cargo.toml
crates/xclaw-config/src/: lib.rs  loader.rs  model.rs  secrets.rs
crates/xclaw-core/: Cargo.toml
crates/xclaw-core/src/: agent.rs  error.rs  lib.rs  memory.rs  session.rs  types.rs
crates/xclaw-gateway/: Cargo.toml
crates/xclaw-gateway/src/: http.rs  lib.rs  static_files.rs  ws.rs
crates/xclaw-memory/: Cargo.toml
crates/xclaw-memory/src/: error.rs  facade.rs  lib.rs  search.rs  sqlite.rs  store.rs  traits.rs
crates/xclaw-memory/src/role/: config.rs  daily.rs  manager.rs  mod.rs
crates/xclaw-memory/src/session/: expiry.rs  fs_store.rs  fs_store_tests.rs  mod.rs  policy.rs  record_id.rs  store.rs  time_util.rs  types.rs
crates/xclaw-memory/src/tools/: memory_file_tools.rs  memory_tools.rs  mod.rs  role_tools.rs
crates/xclaw-memory/src/workspace/: loader.rs  mod.rs  templates.rs  types.rs
crates/xclaw-memory/tests/: memory_files_integration.rs  memory_system_integration.rs  role_manager_integration.rs  session_integration.rs
crates/xclaw-provider/: Cargo.toml
crates/xclaw-provider/src/: claude.rs  error.rs  lib.rs  minimax.rs  ollama.rs  openai.rs  router.rs  traits.rs  types.rs
crates/xclaw-skill/: Cargo.toml
crates/xclaw-skill/src/: executor.rs  lib.rs  loader.rs  registry.rs  traits.rs
crates/xclaw-tools/: Cargo.toml
crates/xclaw-tools/src/: browser.rs  datetime.rs  error.rs  file.rs  file_io.rs  lib.rs  registry.rs  security.rs  shell.rs  traits.rs  web_fetch.rs
crates/xclaw-tools/tests/: datetime_integration.rs  file_tools_integration.rs
docs/architecture/: ARCHITECTURE.md  session-id-renewal.md  session-system.md  transcript-record-v2.md
docs/architecture/adr/: ADR-001-axum-gateway.md  ADR-002-tauri-v2-desktop.md  ADR-003-svelte5-frontend.md  ADR-004-sqlite-storage.md  ADR-005-role-based-memory.md  ADR-006-session-system.md  ADR-007-transcript-record-v2.md  ADR-008-memory-file-safe-write.md
docs/architecture/changelog/: 2026-03-22-initial-architecture.md  2026-03-25-split-core-add-skill.md  2026-03-26-memory-tools-cohesion.md  2026-03-26-role-based-memory.md  2026-03-28-session-system.md  2026-03-30-session-id-renewal.md  2026-03-31-transcript-record-v2.md  2026-04-06-memory-file-safe-write.md
docs/plan/: 2026-03-24-claude-provider.md  2026-03-24-minimax-provider.md  2026-03-24-xclaw-provider-openai.md  2026-03-25-minimal-cli-agent.md  2026-03-25-tools-file.md  2026-03-26-memory-module.md  2026-03-26-memory-tools-cohesion.md  2026-03-28-session-system.md  2026-03-29-agent-engine.md  2026-03-29-cli-multi-turn.md  2026-03-30-memory-base-dir-workspace.md  2026-03-30-session-id-renewal.md  2026-03-31-transcript-record-v2.md  2026-04-01-bootstrap-templates.md  2026-04-01-memory-file-delete.md  2026-04-02-bootstrap-prompt-priority.md  2026-04-02-cli-debug-mode.md  2026-04-02-debug-tool-call-errors.md  2026-04-03-memory-tool-descriptions.md  2026-04-03-roles-yaml-consolidation.md  2026-04-04-transcript-tail-evaluation.md  2026-04-06-memory-file-safe-write.md  2026-04-07-fix-history-filter-tool-messages.md  2026-04-07-get-current-datetime.md  2026-04-07-history-content-filter.md  2026-04-07-remove-history-content-kinds-filter.md
docs/reference/template/bootstrap/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
frontend/: package.json  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: +page.svelte
frontend/src/routes/config/: +page.svelte
frontend/src/routes/memory/: +page.svelte
frontend/src/routes/monitor/: +page.svelte
