[package]
name = "xclaw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xclaw"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xclaw-core = { workspace = true }
xclaw-config = { workspace = true }
xclaw-gateway = { workspace = true }
