[package]
name = "xclaw-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xclaw-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xclaw-gateway = { workspace = true }
xclaw-config = { workspace = true }
