[package]
name = "xclaw-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xclaw-core = { workspace = true }
xclaw-provider = { workspace = true }
xclaw-memory = { workspace = true }
xclaw-tools = { workspace = true }
xclaw-skill = { workspace = true }
xclaw-channel = { workspace = true }
xclaw-config = { workspace = true }
