[package]
name = "xclaw-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xclaw-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
