[package]
name = "xclaw-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xclaw-config = { workspace = true }
xclaw-provider = { workspace = true }
xclaw-tools = { workspace = true }
