[package]
name = "xclaw-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xclaw-core = { workspace = true }
xclaw-config = { workspace = true }
xclaw-channel = { workspace = true }
