[package]
name = "xclaw-memory"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
libc = { workspace = true }
nanoid = { workspace = true }
xclaw-core = { workspace = true }
xclaw-tools = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
