[package]
name = "xclaw-skill"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xclaw-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
