[package]
name = "xclaw-desktop"
version.workspace = true
edition.workspace = true

# NOTE: Not included in workspace members until `tauri init` is run.
# Uncomment the workspace member entry in root Cargo.toml after Tauri setup.

[[bin]]
name = "xclaw-desktop"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xclaw-core = { workspace = true }
xclaw-config = { workspace = true }
xclaw-gateway = { workspace = true }
